--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BoemiaApp</string>
     <string name="action_settings">Settings</string>
+    <string name="action_details">Details</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
