--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_details">Details</string>
     <string name="action_refresh">Refresh</string>
+
+    <string name="facebook_app_id">1566555970322030</string>
 </resources>
