--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_refresh">Refresh</string>
 
     <string name="facebook_app_id">1566555970322030</string>
+    <string name="google_api_id">AIzaSyDYeUnaFoqh7hPRN7kYky5CFLynqB57Axw</string>
 </resources>
