--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="facebook_app_id">1566555970322030</string>
     <string name="google_api_id">AIzaSyDYeUnaFoqh7hPRN7kYky5CFLynqB57Axw</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="location_name_text_view">Pampa Burger</string>
+    <string name="location_address_text_view">Avenida Ipiranga</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -21,4 +23,10 @@
 
     <string name="client_id">IYS5412OVCTWNSVPNTPDRLEPBFW2JCSVICMIZOAUYKAABBQ1</string>
     <string name="client_secret">D51INDHRNWSSH0UZQD4QGT2S5BBONAUCK1WTJIEEHHBS1E3E</string>
+
+    <!-- Strings related to foursquare -->
+    <string name="foursquare_client_id">IYS5412OVCTWNSVPNTPDRLEPBFW2JCSVICMIZOAUYKAABBQ1</string>
+    <string name="foursquare_client_secret">D51INDHRNWSSH0UZQD4QGT2S5BBONAUCK1WTJIEEHHBS1E3E</string>
+
+
 </resources>
