--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_refresh">Refresh</string>
 
     <string name="facebook_app_id">1566555970322030</string>
-    <string name="google_api_id">AIzaSyDYeUnaFoqh7hPRN7kYky5CFLynqB57Axw</string>
+    <string name="google_places_api_id">AIzaSyDYeUnaFoqh7hPRN7kYky5CFLynqB57Axw</string>
+    <string name="android_key">AIzaSyDX1RdfP-zOsog3WpfHFoYx9fJZvCKBmyM</string>
     <string name="title_activity_login">Sign in</string>
     <string name="location_name_text_view">Pampa Burger</string>
     <string name="location_address_text_view">Avenida Ipiranga</string>
