--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 
     <string name="pref_location_latitude">loc-latitude</string>
     <string name="pref_location_longitude">loc-longitude</string>
+    <string name="empty_location_list">Você ainda não tem nenhum lugar na lista.</string>
 
 
 </resources>
