--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="pref_location_latitude">loc-latitude</string>
     <string name="pref_location_longitude">loc-longitude</string>
     <string name="empty_location_list">Você ainda não tem nenhum lugar na lista.</string>
+    <string name="rating_alert_dialog_title">Vote!</string>
+    <string name="rating_alert_dialog_message">Sua cerveja está gelada?</string>
 
 
 </resources>
